--- a/ESTRUTURA_DE_DADOS/.project
+++ b/ESTRUTURA_DE_DADOS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ESTRUTURA_DE_DADOS</name>
+	<name>ARRAYLIST_HASH_TREES_GRAFO</name>
 	<comment></comment>
 	<projects>
 	</projects>
